# taskmaster

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
taskmaster/: main.py
taskmaster/common/: __init__.py  colours.py  task.py  task_list.py
tests/common/: test_task.py  test_task_list.py
