[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "taskmaster"
dynamic = ["version"]
authors = [
    { name="Thomas Nelson", email="tn90ca@gmail.com" },
]
description = "A GPT powered task management system."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "openai",
    "pinecone-client",
]

[project.optional-dependencies]
test = [
    "pytest==7.2.1",
    "pytest-xdist[psutil]==3.1.0",
    "flake8==4.0.1",
    "black==23.1.0",
    "flake8-black==0.3.6",
    "isort==5.12.0",
    "flake8-isort==6.0.0",
    "pep8-naming==0.13.2",
    "pytest-flake8-v2==1.2.3",
    "pytest-blockage==0.2.4",
    "pytest-sugar==0.9.6",
    "pytest-icdiff==0.6",
    "pytest-cov==4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Chippers255/taskmaster"
"Bug Tracker" = "https://github.com/Chippers255/taskmaster/issues"

[tool.black]
line-length = 200
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
python_files = "tests.py test_*.py"
addopts = """\
    -ra \
    --flake8 \
    --cov=. \
    --cov=senso \
    --cov-fail-under=10 \
    --cov-report xml --cov-report term-missing:skip-covered \
    -n auto \
    --blockage"""